[project]
requires-python = ">=3.7"

[build-system]
requires = [
  "setuptools>=19.6",
  # see https://github.com/numpy/numpy/pull/18389
  "wheel>=0.36.2",
  "Cython>=0.29.21",
  "oldest-supported-numpy"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
known_third_party = ["numpy","pytest"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "C", "F", "U", "B", "A", "YTT", "S", "N"]
ignore = ["S101"]
target-version = 'py37'
