[project]
name = "cython_fortran_file"
version = "0.2.6"
description = "An efficient package to read fortran-record files in Python."
authors = [{name = "Corentin Cadiou", email = "contact@cphyc.me"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "cython",
    "numpy",
]


[build-system]
requires = [
  "setuptools>=19.6",
  # see https://github.com/numpy/numpy/pull/18389
  "wheel>=0.36.2",
  "Cython>=0.29.21",
  "oldest-supported-numpy"
]

[project.readme]
file = "Readme.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/cphyc/cython_fortran_file"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
cython_fortran_file = [
    "cython_fortran_file/*.pyx",
    "cython_fortran_file/*.pxd",
]

[tool.distutils.bdist_wheel]
universal = 1

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
collect_ignore = "['setup.py']"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
known_third_party = ["numpy","pytest"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "C", "F", "U", "B", "A", "YTT", "S", "N"]
ignore = ["S101"]
target-version = 'py38'
