[metadata]
name = cython_fortran_file
version = 0.2.4
description = An efficient package to read fortran-record files in Python.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/cython_fortran_file
author = Corentin Cadiou
author_email = contact@cphyc.me
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    cython
    numpy
python_requires = >=3.7

[options.package_data]
cython_fortran_file =
    cython_fortran_file/*.pyx
    cython_fortran_file/*.pxd

[bumpversion]
current_version = 0.2.4
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:cython_fortran_file/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
ignore = E203, # Whitespace before ':' (black compatibility)
    E266, # Too many leading '#' for block comment
    E302, # Expected 2 blank lines, found 0
    E501, # Line too long (let Black deal with line-lenght)
    E741, # Do not use variables named 'I', 'O', or 'l'
    W503, # Line break occurred before a binary operator (black compatibility)
jobs = 8

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
skip = doc
known_third_party = IPython, nose, numpy, sympy, matplotlib, unyt, git, yaml, dateutil, requests, coverage, pytest, yt
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
