[metadata]
name = cython_fortran_file
version = 0.2.5
description = An efficient package to read fortran-record files in Python.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/cython_fortran_file
author = Corentin Cadiou
author_email = contact@cphyc.me
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
install_requires =
    cython
    numpy
python_requires = >=3.7

[options.package_data]
cython_fortran_file =
    cython_fortran_file/*.pyx
    cython_fortran_file/*.pxd

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
